--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,17 +1,9 @@
 .container {
   height: 100vh;
-  max-width: 992px;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 2.5rem 2rem;
+  padding: 2.5rem 0;
 
   display: flex;
   flex-direction: column;
-}
-
-.container section {
-  flex: 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 6.25rem;
-  align-content: center;
 }
