--- a/src/styles/components/Program.module.css
+++ b/src/styles/components/Program.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 1rem;
   gap: 1rem;
   align-items: center;
   height: 2rem;
