code cleanup, readme

--- a/src/styles/contexts/ProcessQueue.module.css
+++ b/src/styles/contexts/ProcessQueue.module.css
@@ -7,5 +7,5 @@
   border: rgba(0, 0, 0, 0.2) 1px solid;
   overflow-y: scroll;
   box-shadow: 0 0 60px rgba(0, 0, 0, 0.1);
-  min-height: 32rem;
+  margin-bottom: 3rem;
 }
